Re-fix for sponsor logo spacing

--- a/scss/breakpoints/base.scss
+++ b/scss/breakpoints/base.scss
@@ -668,7 +668,7 @@ body.home {
 
       img {
         display: inline-table;
-        margin: 0 0 ms(18) 0;
+        margin: 0 ms(18) ms(18) ms(18);
       }
 
       #ruby-sponsors,
